<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wechat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_tongxunlu"
        android:name="com.example.wechat.ui.tongxunlu.TongxunluFragment"
        android:label="@string/title_tongxunlu"
        tools:layout="@layout/fragment_tongxunlu" />
    <fragment
        android:id="@+id/navigation_find"
        android:name="com.example.wechat.ui.find.FindFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_find" />
    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.wechat.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

</navigation>